Added initial menu, and application layer with Unit Testing.

--- a/WordSearcher.Console/App.config
+++ b/WordSearcher.Console/App.config
@@ -6,6 +6,10 @@
 
   <log4net source="Config/log4net.config" />
 
+  <appSettings>
+    <add key="finishWord" value=":quit"/>
+  </appSettings>
+
   <startup> 
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
