--- a/WordSearcher.Console/WordSearcher.Console.csproj
+++ b/WordSearcher.Console/WordSearcher.Console.csproj
@@ -37,6 +37,7 @@
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
@@ -72,6 +73,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\WordSearcher.Application\WordSearcher.Application.csproj">
+      <Project>{0ADCCCBA-71D7-4E94-A92E-D481BACC553C}</Project>
+      <Name>WordSearcher.Application</Name>
+    </ProjectReference>
     <ProjectReference Include="..\WordSearcher.Infrastructure\WordSearcher.Infrastructure.csproj">
       <Project>{308f9393-f08a-4715-9929-141a5aa06c3f}</Project>
       <Name>WordSearcher.Infrastructure</Name>
