--- a/WordSearcher.Console/App.config
+++ b/WordSearcher.Console/App.config
@@ -8,6 +8,7 @@
 
   <appSettings>
     <add key="finishWord" value=":quit"/>
+    <add key="punctuationMarks" value=",.;"/>
   </appSettings>
 
   <startup> 
