--- a/WordSearcher.Infrastructure/WordSearcher.Infrastructure.csproj
+++ b/WordSearcher.Infrastructure/WordSearcher.Infrastructure.csproj
@@ -35,6 +35,7 @@
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
@@ -59,7 +60,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IConfigurationProvider.cs" />
     <Compile Include="Contracts\ILogger.cs" />
+    <Compile Include="Implementations\ConfigurationProvider.cs" />
     <Compile Include="Implementations\IoCHelper.cs" />
     <Compile Include="Implementations\Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
