Added initial version of file management

--- a/WordSearcher.Console/App.config
+++ b/WordSearcher.Console/App.config
@@ -9,6 +9,8 @@
   <appSettings>
     <add key="finishWord" value=":quit"/>
     <add key="punctuationMarks" value=",.;"/>
+    <add key="textExtension" value="*.txt"/>
+    <add key="numberOfResultsToShow" value="3"/>
   </appSettings>
 
   <startup> 
