--- a/WordSearcher.Models/WordSearcher.Models.csproj
+++ b/WordSearcher.Models/WordSearcher.Models.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0ADCCCBA-71D7-4E94-A92E-D481BACC553C}</ProjectGuid>
+    <ProjectGuid>{E7211B44-92B8-4430-91AC-50B2EE44A11A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WordSearcher.Application</RootNamespace>
-    <AssemblyName>WordSearcher.Application</AssemblyName>
+    <RootNamespace>WordSearcher.Models</RootNamespace>
+    <AssemblyName>WordSearcher.Models</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,7 +32,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,24 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Implementations\FileManager.cs" />
-    <Compile Include="Contracts\IFileManager.cs" />
-    <Compile Include="Contracts\IFileProcessor.cs" />
-    <Compile Include="Contracts\IUserExperienceManager.cs" />
-    <Compile Include="Implementations\FileProcessor.cs" />
-    <Compile Include="Implementations\UserExperienceManager.cs" />
+    <Compile Include="FileProcessed.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchResult.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\WordSearcher.Infrastructure\WordSearcher.Infrastructure.csproj">
-      <Project>{308f9393-f08a-4715-9929-141a5aa06c3f}</Project>
-      <Name>WordSearcher.Infrastructure</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WordSearcher.Models\WordSearcher.Models.csproj">
-      <Project>{e7211b44-92b8-4430-91ac-50b2ee44a11a}</Project>
-      <Name>WordSearcher.Models</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
