--- a/WordSearcher.Infrastructure.Tests/App.config
+++ b/WordSearcher.Infrastructure.Tests/App.config
@@ -3,6 +3,8 @@
   <appSettings>
     <add key="finishWord" value=":quit"/>
     <add key="punctuationMarks" value=",.;"/>
+    <add key="numberOfResultsToShow" value="3"/>
+    <add key="stringKey" value="itIsAText"/>
   </appSettings>
 
   <startup> 
