--- a/WordSearcher.Application.Tests/WordSearcher.Application.Tests.csproj
+++ b/WordSearcher.Application.Tests/WordSearcher.Application.Tests.csproj
@@ -75,6 +75,11 @@
       <Name>WordSearcher.Models</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="SampleText.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
