--- a/WordSearcher.Application.Tests/WordSearcher.Application.Tests.csproj
+++ b/WordSearcher.Application.Tests/WordSearcher.Application.Tests.csproj
@@ -53,8 +53,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileProcessorTests.cs" />
-    <Compile Include="UserExperienceManagerTests.cs" />
+    <Compile Include="Implementations\FileManagerTests.cs" />
+    <Compile Include="Implementations\FileProcessorTests.cs" />
+    <Compile Include="Implementations\UserExperienceManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -76,10 +77,20 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="SingleSampleFolder\SampleText.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SampleFolder\SampleText.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SampleFolder\SampleText2.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="SampleText.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
